# flappy-bird-from-wish

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
__archive_01/: CMakeLists.txt  README.md
__archive_01/src/: AssetManager.cpp  AssetManager.hpp  Bird.cpp  DEFINITIONS.hpp  Flash.cpp  Game.cpp  GameOverState.cpp  GameOverState.hpp  GameState.cpp  HUD.hpp  InputManager.cpp  Land.cpp  MainMenuState.hpp  Pipe.cpp  SplashState.cpp  SplashState.hpp  State.hpp
src/: AssetManager.cpp  AssetManager.hpp  Bird.cpp  Bird.hpp  Collision.cpp  Collision.hpp  DEFINITIONS.hpp  Flash.hpp  Game.cpp  Game.hpp  GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  HUD.cpp  InputManager.cpp  InputManager.hpp  Land.cpp  Land.hpp  Main.cpp  MainMenuState.cpp  Pipe.cpp  Pipe.hpp  SplashState.cpp  SplashState.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp  _DEFINITIONS.hpp
